깃이그노어 수정2

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-workspace/Servers/
-workspace/checkminePrj/.settings/
-workspace/checkminePrj/target/
-workspace/checkminePrj/.springBeans
+spring-practice/Servers/
+spring-practice/.settings/
+spring-practice/target/
+spring-practice/.springBeans
 *.properties
 #이하 내용은 사이트에서 가져옴
 
