스프링 입문 - 코드로 배우는 스프링 부트, 웹 MVC, DB 접근 기술 7강 view 환경설정

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-spring-practice/Servers/
-spring-practice/.settings/
-spring-practice/target/
-spring-practice/.springBeans
+Servers/
+.settings/
+target/
+.springBeans
 *.properties
 #이하 내용은 사이트에서 가져옴
 
